--- a/you-kan.Server/package.json
+++ b/you-kan.Server/package.json
@@ -13,13 +13,22 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "connect-ensure-login": "^0.1.1",
+    "connect-session-sequelize": "^7.1.7",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "http-errors": "^2.0.0",
     "jest": "^29.7.0",
+    "morgan": "^1.10.0",
     "mysql2": "^3.10.3",
     "nodemon": "^3.1.4",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "pluralize": "^8.0.0",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7",
     "supertest": "^7.0.0"
